[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mavts"
version = "0.0.9"
authors = [{ name="Ilija Ilievski", email="ilija139@gmail.com" }]
description = "Model Performance Analysis and Visualization for Time Series Forecasting"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"matplotlib==3.7.0",
"numpy==1.23.5",
"pandas==1.5.3"
]

[project.urls]
"Homepage" = "https://github.com/ilija139/MAVts"
"Bug Tracker" = "https://github.com/ilija139/MAVts/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
